# kafka-python-demo

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml
src/: consumer.py  producer.py
