[tool.poetry]
name = "kafka-python-getting-started"
version = "0.1.0"
description = ""
authors = ["Casper Damen <casper.a.damen@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
confluent-kafka = "^2.3.0"
configparser = "^6.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
